# KNN-Project

./: .gitignore  README.md  ZADANI.md  pyproject.toml
datasets/: README.md
train/: dataset.py  shared.py  test.py  train.py  util.py
video_processing/: README.md  extract_photos.py  label_dataset.py  pipeline_execute.py  requirements.txt
